Fix party ideas icon on mobile

--- a/stylesheets/modules/page-header.less
+++ b/stylesheets/modules/page-header.less
@@ -251,6 +251,12 @@ height: inherit;
             display: block
         }
     }
+    &:nth-child(2){
+        display: none;
+        @media (min-width: 1025px) {
+            display: block
+        }
+    }
     & svg {
         height: 35px;
         width: 35px;
